--- a/Game251Collab.html
+++ b/Game251Collab.html
@@ -153,7 +153,9 @@ body {
   ul{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: left;
+    margin-left: 0;
+    padding-left: 0;
   }
   ul li a{
     text-decoration:none;
@@ -162,16 +164,18 @@ body {
     display:block;
     height:5em;
     width:5em;
-    padding:1em;
+    padding:.5em;
+    box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+
   }
   ul li{
-    margin:-2em;
+    margin: .5em;
   }
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">window.hi = function() {
   /* code */
 	return "hi";
   
-}</script><tw-passagedata pid="1" name="Intro" tags="" position="300,400" size="100,100">Intro Screen Here
+}</script><tw-passagedata pid="1" name="Intro" tags="" position="300,250" size="100,100">Intro Screen Here
 /* call javascript function hi */
 &lt;&lt;= hi();&gt;&gt;
 /*set return value from function hi to variable stuff*/
@@ -215,7 +219,7 @@ Tasks: $toDoList.length
 &lt;/ul&gt;
 &lt;/div&gt;
 &lt;&lt;/if&gt;&gt;
-</tw-passagedata><tw-passagedata pid="6" name="Idea Placeholder" tags="" position="75,25" size="100,100">Locations:
+</tw-passagedata><tw-passagedata pid="6" name="Idea Placeholder" tags="" position="100,25" size="100,100">Locations:
 Beach
 Your room
 Shop
