--- a/Game251Collab.html
+++ b/Game251Collab.html
@@ -127,9 +127,9 @@ body {
 .post-it{
   max-width: 90%;
   margin: auto;
-  border: 3px solid #73AD21;
+  border: 2px solid white;
   margin:auto;
-  background:#666;
+  background:#CECECE;
   color:#fff;
    
   *{
@@ -160,17 +160,42 @@ body {
     color:#000;
     background:#ffc;
     display:block;
-    font-family: 'nanum';
+    font-family: 'caveat';
     height:5em;
     width:5em;
     padding:.25em;
     margin-top: 0;
     box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+     transform: rotate(-6deg);
+    transition: transform .15s linear;
 
   }
   ul li{
     margin: .5em;
   }
+  ul li:nth-child(even) a{
+  transform:rotate(4deg);
+  position:relative;
+  top:5px;
+  background:#FBD8DD;
+}
+ul li:nth-child(3n) a{
+  transform:rotate(-3deg);
+  position:relative;
+  top:-5px;
+  background:#C4F8FB;
+}
+ul li:nth-child(5n) a{
+  transform:rotate(5deg);
+  position:relative;
+  top:-10px;
+}
+  ul li a:hover,ul li a:focus{
+  box-shadow:10px 10px 7px rgba(0,0,0,.7);
+  transform: scale(1.25);
+  position:relative;
+  z-index:5;
+}
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">/*imports*/
 importScripts(
   "js/taskDB.js"
