--- a/Game251Collab.html
+++ b/Game251Collab.html
@@ -198,7 +198,7 @@ body {
   }
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">/*imports*/
 importScripts(
-  "js/taskDB.js"
+  ["js/taskDB.js", "js/test.js"]
 ).then (function(){
   console.log(window.taskDBImport);
 })
@@ -207,12 +207,12 @@ importScripts(
 });
 
 /* Call to mini game */
-window.launchGame = function(toDoList, text, time){
+window.launchGame = function(){
   alert('Instead Make Call to Mini Game');
+  window.launchHovered();
  //launch game with time varible to determine difficulty
   //var filtered = toDoList.filter(obj => obj.text !== text);
   //toDoList = filtered;
-  
   
 }
 
@@ -607,11 +607,11 @@ And set a 45 minute timer for the banana bread.I&#39;ve been here three years...
 &lt;div class=&quot;post-it&quot;&gt;
 &lt;ul&gt;
 &lt;&lt;for _i to 0; _i lt $toDoList.length; _i++&gt;&gt; 
-&lt;&lt;set _item = $toDoList[_i]&gt;&gt;
+&lt;&lt;set $item = $toDoList[_i]&gt;&gt;
   &lt;li&gt;
-    &lt;a href=&quot;#&quot; onClick=&quot;launchGame($toDoList, _item[&#39;text&#39;], _item[&#39;time&#39;])&quot;&gt;
-      &lt;h2&gt; _item[&quot;text&quot;]&lt;/h2&gt;
-      &lt;p&gt; _item[&quot;time&quot;] min&lt;/p&gt;
+    &lt;a href=&quot;#&quot; onClick=&quot;launchGame()&quot;&gt;
+      &lt;h2&gt; $item[&quot;text&quot;]&lt;/h2&gt;
+      &lt;p&gt; $item[&quot;time&quot;] min&lt;/p&gt;
     &lt;/a&gt;
   &lt;/li&gt;
 &lt;&lt;/for&gt;&gt; 
@@ -695,7 +695,8 @@ Mood = $mood</tw-passagedata><tw-passagedata pid="15" name="StoryMenu" tags="" p
 &lt;&lt;set $time = $time+30&gt;&gt;
 
 
-After x time, you get up and get &lt;&lt;link &quot;moving.&quot; &quot;Breakfast&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="17" name="MakeBreakfast" tags="" position="625,50" size="100,100">&lt;&lt;choices&gt;&gt;</tw-passagedata><tw-passagedata pid="18" name="TakeOutTrash" tags="" position="500,50" size="100,100">&lt;&lt;choices&gt;&gt;</tw-passagedata><tw-passagedata pid="19" name="Start" tags="" position="475,375" size="100,100">&lt;&lt;if $taskDB.length &gt;1&gt;&gt;
+After x time, you get up and get &lt;&lt;link &quot;moving.&quot; &quot;Breakfast&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="17" name="MakeBreakfast" tags="" position="625,50" size="100,100">&lt;&lt;choices&gt;&gt;</tw-passagedata><tw-passagedata pid="18" name="TakeOutTrash" tags="" position="500,50" size="100,100">&lt;&lt;choices&gt;&gt;</tw-passagedata><tw-passagedata pid="19" name="Start" tags="" position="475,375" size="100,100">
+&lt;&lt;if $taskDB.length &gt;1&gt;&gt;
 &lt;&lt;set $passages = $taskDB.randomMany(2)&gt;&gt;
 $passages[0].storyText but...
 $passages[1].stimText
