--- a/Game251Collab.html
+++ b/Game251Collab.html
@@ -198,7 +198,7 @@ body {
   }
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">/*imports*/
 importScripts(
-  ["js/taskDB.js", "js/test.js"]
+  ["js/taskDB.js", "js/hoveredGame.js"]
 ).then (function(){
   console.log(window.taskDBImport);
 })
@@ -208,7 +208,6 @@ importScripts(
 
 /* Call to mini game */
 window.launchGame = function(){
-  alert('Instead Make Call to Mini Game');
   window.launchHovered();
  //launch game with time varible to determine difficulty
   //var filtered = toDoList.filter(obj => obj.text !== text);
