--- a/Game251Collab.html
+++ b/Game251Collab.html
@@ -198,7 +198,7 @@ body {
   }
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">/*imports*/
 importScripts(
-  ["js/taskDB.js", "js/test.js"]
+  ["js/taskDB.js", "js/hoveredGame.js"]
 ).then (function(){
   console.log(window.taskDBImport);
 })
