--- a/OBE.html
+++ b/OBE.html
@@ -207,11 +207,11 @@ ul{
     top:-10px;
   }*/
   
-    ul li a:hover,ul li a:focus{
+    ul li a:hover, ul li a:focus{
     box-shadow:10px 10px 7px rgba(0,0,0,.7);
-    transform: scale(1.25);
-    position:relative;
-    z-index:5;
+    transform: scale(1.25) !important;
+    position: relative;
+    z-index:505;
   }
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">/*imports*/
 importScripts(
